'added changes'